# rust_excercises

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build-workspace.fish
.github/workflows/: ci.yml
advent_of_code_2024/day_1_historian_hysteria/: Cargo.toml
advent_of_code_2024/day_1_historian_hysteria/src/: main.rs
advent_of_code_2024/day_1_historian_hysteria/src.bk/: main.rs
advent_of_code_2024/day_2_Rednosed_reports/: Cargo.toml
advent_of_code_2024/day_2_Rednosed_reports/src/: main.rs  main.rs.bak
advent_of_code_2024/day_3_mull_it_over/: Cargo.toml
advent_of_code_2024/day_3_mull_it_over/src/: lib.rs.bak  main.rs  main.rs.bak
advent_of_code_2024/day_4_ceres_search/: Cargo.toml
advent_of_code_2024/day_4_ceres_search/src/: lib.rs.bak  main.rs  main.rs.bak  main.rs.part_1
advent_of_code_2024/day_5_print_queue/: 1  Cargo.toml
advent_of_code_2024/day_5_print_queue/src/: lib.rs  main.rs  main.rs.bak
advent_of_code_2024/day_6_guard_gallivant/: Cargo.toml
advent_of_code_2024/day_6_guard_gallivant/src/: lib.rs  lib.rs.bak  main.rs
cqrs-es_examples/kubex_wholesaler/: Cargo.toml  notes.txt
cqrs-es_examples/kubex_wholesaler/src/: main.rs
cqrs-es_examples/lukow_bank/: Cargo.toml
cqrs-es_examples/lukow_bank/src/: main.rs
libs/askusr/: Cargo.toml
libs/askusr/src/: lib.rs
no_boilerplate_light_state/src/: lib.rs
other/light-state-domain-driven/: Cargo.toml
other/light-state-domain-driven/.target/: .rustc_info.json
other/light-state-domain-driven/src/: lib.rs  main.rs  validate.rs
other/no_boilerplate_light_state/: Cargo.toml
other/no_boilerplate_light_state/src/: lib.rs  main.rs
other/rust-algorithms/: exercises.en.md  exercises.md  exercises.pl.md
other/rust-algorithms/z2/a/: exercises.md
other/rust-algorithms/z3/a/: exercises.md
other/rust-algorithms/z4/b/: exercises.md
other/rust-algorithms/z5/a/: exercises.md
other/rust-fundamentals-engineered-from-pl-uni/z1/a/: exercises.md
other/rust-fundamentals-engineered-from-pl-uni/z1a2/src/: main.rs
other/rust-fundamentals-engineered-from-pl-uni/z1a3/: Cargo.toml
other/rust-fundamentals-engineered-from-pl-uni/z1a3-4/: Cargo.toml
other/rust-fundamentals-engineered-from-pl-uni/z1a3-4/src/: main.rs
other/rust-fundamentals-engineered-from-pl-uni/z1a3/src/: lib.rs  main.rs
other/rust-fundamentals-engineered-from-pl-uni/z1a5/src/: lib.rs  main.rs
other/rust-fundamentals-engineered-from-pl-uni/z1a6/: Cargo.toml
other/rust-fundamentals-engineered-from-pl-uni/z1a6/src/: main.rs
other/rust-fundamentals-engineered-from-pl-uni/z1a7/src/: main.rs
other/rust-fundamentals-engineered-from-pl-uni/z1a8/src/: main.rs
other/rust-fundamentals-engineered-from-pl-uni/z1a9/: Cargo.toml
other/rust-fundamentals-engineered-from-pl-uni/z1a9/src/: pythagorians_triangle.rs
other/rust-fundamentals-engineered-from-pl-uni/z2/b/: exercises.md
other/rust-fundamentals-engineered-from-pl-uni/z4/a/: exercises.md
other/rust-fundamentals-engineered-from-pl-uni/z4/b/: exercises.md
pasja_informatyki/evaluation_mean/: 1
pasja_informatyki/evaluation_mean/src/: lib.rs  main.rs
pasja_informatyki/fibbonaci_counter/src/: main.rs
pasja_informatyki/lotto_game/src/: lib.rs  main.rs
pasja_informatyki/odc-4/lotto_game/: Cargo.toml
pasja_informatyki/odc-4/lotto_game/src/: lib.rs  main.rs
pasja_informatyki/odc-5/evaluation_mean/: Cargo.toml
pasja_informatyki/odc-5/evaluation_mean/src/: lib.rs
pasja_informatyki/odc-5/fibbonaci_counter/: Cargo.toml  the_biggest_fib_n_in_my_pc.txt
pasja_informatyki/odc-5/fibbonaci_counter/src/: main.rs
pasja_informatyki/odc-5/simple-example-srednia/: Cargo.toml
pasja_informatyki/odc-5/simple-example-srednia/src/: main.rs
pasja_informatyki/odc-6/cli-month-end-day-checker/: Cargo.toml
pasja_informatyki/odc-6/cli-month-end-day-checker/src/: main.rs
pasja_informatyki/odc-6/two-num-cli-calculator/: Cargo.toml
pasja_informatyki/odc-7/contact-file-managing/: Cargo.toml  wizytówka.txt
pasja_informatyki/odc-7/read-contact-file/: Cargo.toml
pasja_informatyki/odc-7/short-quiz/: Cargo.toml  quiz.txt
pasja_informatyki/odc-7/short-quiz/src/: main.rs
pasja_informatyki/odc-8/: wypisz_prace.sh
pasja_informatyki/odc-8/find-a-string/: Cargo.toml
pasja_informatyki/odc-8/guess-gender-by-name/: Cargo.toml
pasja_informatyki/odc-8/rewrite-word-in-reverse/: Cargo.toml
pasja_informatyki/odc-9/meter-conversion/: Cargo.toml
small_test_tools/automation_mouse_and_keyboard/: Cargo.toml
small_test_tools/automation_mouse_and_keyboard/src/: main.rs
small_test_tools/hex_color_display/: Cargo.toml
small_test_tools/hex_color_display/src/: lib.rs  main.rs
small_test_tools/nowy_zapis_w_spisie_osob/: Cargo.toml  zapisek.cvf
small_test_tools/nowy_zapis_w_spisie_osob/src/: lib.rs  main.rs
small_test_tools/nowy_zapis_w_spisie_osob/tests/: integtration_test.rs
small_test_tools/nowy_zapis_w_spisie_osób/: Cargo.toml
small_test_tools/nowy_zapis_w_spisie_osób/src/: config.rs  input.rs  lib.rs  main.rs  output.rs
small_test_tools/oblicz-koszty-roweru/: Cargo.toml
small_test_tools/oblicz-koszty-roweru/src/: cli.rs  lib.rs  main.rs  output.rs
small_test_tools/odnowienie_pamieci_zamiennej_swap/: Cargo.toml
small_test_tools/odnowienie_pamieci_zamiennej_swap/src/: lib.rs  main.rs
small_test_tools/program_do_mówienia_prawdy/: Cargo.toml
small_test_tools/program_do_mówienia_prawdy/src/: main.rs
small_test_tools/recordbook_vcard_cli/: Cargo.toml
small_test_tools/recordbook_vcard_cli/src/: lib.rs  main.rs
small_test_tools/recordbook_vcard_cli/tests/: integtration_test.rs
small_test_tools/remove_first_word_of_filename/: Cargo.toml
small_test_tools/remove_first_word_of_filename/src/: lib.rs  main.rs
small_test_tools/restart_swap/: Cargo.toml
small_test_tools/restart_swap/src/: lib.rs  main.rs
small_test_tools/test_curl_vs_reqwest/: Cargo.toml  README.md  result_curl  result_libcurl  result_reqwest
small_test_tools/texty-rusty-sound-/: Cargo.toml
small_test_tools/zamień_znak/: Cargo.toml
small_test_tools/zamień_znak/src/: main.rs
(+96 files in other folders)
