[workspace]
members = [
  "./other/light-state-domain-driven",
  "./other/rust-fundamentals-engineered-from-pl-uni/z1a1",
  "./other/rust-fundamentals-engineered-from-pl-uni/z1a2",
  "./other/rust-fundamentals-engineered-from-pl-uni/z1a3-4",
  "./pasja_informatyki/odc-4/lotto_game",
  "./pasja_informatyki/odc-5/evaluation_mean",
  "./pasja_informatyki/odc-5/fibbonaci_counter",
  "./pasja_informatyki/odc-5/simple-example-srednia",
  "./pasja_informatyki/odc-6/cli-month-end-day-checker",
  "./pasja_informatyki/odc-6/two-num-cli-calculator",
  "./pasja_informatyki/odc-7/contact-file-managing",
  "./pasja_informatyki/odc-7/read-contact-file",
  "./pasja_informatyki/odc-7/short-quiz",
  "./pasja_informatyki/odc-8/concatenation",
  "./pasja_informatyki/odc-8/find-a-string",
  "./pasja_informatyki/odc-8/guess-gender-by-name",
  "./pasja_informatyki/odc-8/rewrite-word-in-reverse",
  "./pasja_informatyki/odc-9/meter-conversion",
  "./small_test_tools/hex_color_display",
  "./small_test_tools/oblicz-koszty-roweru",
  "./small_test_tools/program_do_mówienia_prawdy",
  "./small_test_tools/recordbook_vcard_cli",
  "./small_test_tools/restart_swap",
  "./small_test_tools/test_curl_vs_reqwest",
  "./small_test_tools/texty-rusty-sound-"
, "other/rust-fundamentals-engineered-from-pl-uni/z1a5", "other/rust-fundamentals-engineered-from-pl-uni/z1a6", "other/rust-fundamentals-engineered-from-pl-uni/z1a7"]
resolver = "2"
