[workspace]
members = [
  "./libs/askusr",
  "./other/light-state-domain-driven",
  "./other/rust-algorithms/z1/a/z1a1",
  "./other/rust-algorithms/z1/a/z1a2",
  "./other/rust-algorithms/z1/a/z1a3-4",
  "./other/rust-algorithms/z1/a/z1a5",
  "./other/rust-algorithms/z1/a/z1a6",
  "./other/rust-algorithms/z1/a/z1a7",
  "./other/rust-algorithms/z1/a/z1a8",
  "./other/rust-algorithms/z1/a/z1a9",
  "./other/rust-algorithms/z2/a/z1",
  "./other/rust-algorithms/z2/a/z2",
  "./other/rust-algorithms/z2/a/z3_armstrong_num",
  "./other/rust-algorithms/z2/a/z4_perfect_number",
  "./other/rust-algorithms/z2/a/z5_czynniki_pierwsze",
  "./other/rust-algorithms/z2/a/z6_pow_mod",
  "./other/rust-algorithms/z2/b/z1_sort_in_descending_ord",
  "./other/rust-algorithms/z2/b/z2_rand_gen_nums",
  "./other/rust-algorithms/z3/a/z1_met_newton",
  "./other/rust-algorithms/z4/a/z1-number-of-occurrences",
  "./other/rust-algorithms/z4/a/z2-roman-num-into-arabic",
  "./other/rust-algorithms/z4/b/z1-rm-every-second-char",
  "./other/rust-algorithms/z4/b/z2-simple-reverse-encoding",
  "./other/rust-algorithms/z4/b/z3-wizytowka",
  "./other/rust-algorithms/z4/b/z4-liczby-na-rzymskie",
  "./other/rust-algorithms/z4/b/z5-add-in-writing",
  "./pasja_informatyki/odc-4/lotto_game",
  "./pasja_informatyki/odc-5/evaluation_mean",
  "./pasja_informatyki/odc-5/fibbonaci_counter",
  "./pasja_informatyki/odc-5/simple-example-srednia",
  "./pasja_informatyki/odc-6/cli-month-end-day-checker",
  "./pasja_informatyki/odc-6/two-num-cli-calculator",
  "./pasja_informatyki/odc-7/contact-file-managing",
  "./pasja_informatyki/odc-7/read-contact-file",
  "./pasja_informatyki/odc-7/short-quiz",
  "./pasja_informatyki/odc-8/concatenation",
  "./pasja_informatyki/odc-8/find-a-string",
  "./pasja_informatyki/odc-8/guess-gender-by-name",
  "./pasja_informatyki/odc-8/rewrite-word-in-reverse",
  "./pasja_informatyki/odc-9/meter-conversion",
  "./small_test_tools/hex_color_display",
  "./small_test_tools/oblicz-koszty-roweru",
  "./small_test_tools/program_do_mówienia_prawdy",
  "./small_test_tools/recordbook_vcard_cli",
  "./small_test_tools/restart_swap",
  "./small_test_tools/test_curl_vs_reqwest",
  "./small_test_tools/texty-rusty-sound-"
]
resolver = "2"
