[package]
name = "kubex_wholesaler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio        = { version = "1", features = ["full"] }
async-trait  = "0.1.52"
serde        = { version = "1.0", features = ["derive"] }
chrono       = { version = "0.4", features = ["serde", "clock"] }
sqlx         = { version = "0.7", features = [
                  "runtime-tokio-native-tls",
                  "macros",
                  "postgres"
                ]}
cqrs-es      = "0.4.2"
postgres-es  = "0.3.0"
