
[package]
name = "kubex_wholesaler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio        = { version = "1", features = ["full"] }
async-trait  = "0.1.52"
serde        = { version = "1.0", features = ["derive"] }
chrono       = { version = "0.4", features = ["serde", "clock"] }
sqlx         = { version = "0.8", features = [
                  "runtime-tokio-native-tls",
                  "macros",
                  "postgres"
                ]}
cqrs-es      = "0.4.2"
postgres-es  = "0.4.2"

